[project]
name = "unsta-bioing-signal-process-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "wfdb>=4.3.1",
]
